# graph-plotter

./: .gitignore  CMakeLists.txt
graph-plotter/: CMakeLists.txt
graph-plotter/include/: graph.hpp
graph-plotter/src/: graph.cpp
shaders/: graph.frag  graph.vert
src/: camera.hpp  main.cpp  main.hpp  utils.cpp  utils.hpp
